Sudo fix checkboxes not showing on Chrome

--- a/_includes/css/open-jordan.css
+++ b/_includes/css/open-jordan.css
@@ -364,5 +364,5 @@ ul.ss-choices {
 }
 
 form input[type="checkbox"] {
-    width: auto;
+    width: auto !important;
 }
